# imaging-system

./: .gitignore  Imaging_system.step  README.md  flir.py  main.py
.github/workflows/: ci.yml
Temperature_Sensor_Arduino/: temp_Sens.ino
camera-troubleshooting/: cleanroom.md
camera-troubleshooting/assets/: new-cable.tif  old-cable.tif
experiments/Dino_Lite/Ecoli/20221025/: 20221025_CK_Ecoli.csv  plotting.R
experiments/Dino_Lite/Fluorescein/20221025/: 20221025_CK_Fluorescein.csv  plotting.R
experiments/Dino_Lite/YHL033C/20221025/: 20221025_CK_YHL033C.csv  plotting.R
experiments/Dino_Lite/YHL033C/20221027/: 20221027_CK_YHL033C.csv  plotting.R
experiments/Dino_Lite/YHL033C/20221029/: 20221029_CK_YHL033C.csv  plotting.R
experiments/Dino_Lite/YHL033C/20221109/: 20221109_SS_YHL033C.csv  plotting.R
experiments/Payload_Proposal_DM/20230302/: 20230302_IK.csv  plotting.R
gcodes/: CameraBase.gcode  CameraBase1.gcode  CameraBase2.gcode  LEDBase.gcode  LEDBase1.gcode  LEDBase2.gcode  LEDStand.gcode  base.gcode  camera-holder.gcode  cap.gcode
hotbed-enclosure/temperature-control/: README.md  add-files-to-spec  pyproject.toml
hotbed-enclosure/temperature-control/.github/workflows/: ci.yml
hotbed-enclosure/temperature-control/arduino/: HotBedSimple.ino  README.md  data-gather.ino  on-off-control.ino  temperature-sensor.ino
hotbed-enclosure/temperature-control/control/: README.md
hotbed-enclosure/temperature-control/control/data/: 14-223146  15-130118  15-131639  15-153000  README.md  temperature.csv
hotbed-enclosure/temperature-control/control/model/: README.md  temperature_model.mat
hotbed-enclosure/temperature-control/example-data/: 07-12-2022  07-12-2022.csv  07-12-2022.md
hotbed-enclosure/temperature-control/temperature_control/: GUI.py  IOUtils.py  config.toml  config_model.py  eltypes.py  main.py  paths.py  plot.py
setups/: Camera_Horizontal.step  DinoLite_Chip_Vertical.step
(+2 files in other folders)
