[tool.poetry]
name = "temperature-control"
version = "0.1.0"
description = "Python utilities to log and index temperature sensor readings."
authors = ["Orestis Ousoultzoglou <orousoultzoglou@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "temperature_control" } ]

[tool.poetry.dependencies]
python = "^3.11"
pytest = { version = "^7.2.0", optional = true }
yapf = "^0.32.0"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
