[tool.poetry]
name = "temperature-control"
version = "0.1.0"
description = "Python utilities to log and index temperature sensor readings."
authors = ["Orestis Ousoultzoglou <orousoultzoglou@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "temperature_control" } ]

[tool.poetry.dependencies]
python = "~3.11"
pytest = { version = "^7.2.0", optional = true }
yapf = { version = "^0.32.0", optional = true }
pyside6 = "^6.4.1"
toml = { version = "^0.10.2", optional = true }
pydantic = "^1.10.2"
pyprojroot = "^0.2.0"
pandas = "^1.5.2"

[tool.poetry.extras]
format = ["yapf", "toml"]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
